# Mean_reversion

./: .gitignore  README.md  pyproject.toml  requirements.txt  scanner.py
backtest_results/: equity_curve_5y_2026-07-16.csv  equity_curve_5y_2026-07-17.csv  portfolio_5y_2026-07-16.csv  portfolio_5y_2026-07-17.csv  summary_5y_2026-07-16.txt  summary_5y_2026-07-17.txt  trades_5y_2026-07-16.csv  trades_5y_2026-07-17.csv
config/: config.yaml  secrets.env.example
scan_results/: short_candidates_2026-07-16.csv  short_candidates_2026-07-17.csv
scripts/: compare_variants.py  kite_login.py  live_scan.py  manage_positions.py  place_entries.py  plan_trades.py  run_backtest.py  run_scan.py
src/mr_short/: __init__.py  backtest.py  filters.py  indicators.py  risk.py  scanner.py  universe.py  utils.py
src/mr_short/kite/: auth.py  instruments.py  orders.py
src/mr_short/live/: data.py  fvg.py  intraday.py  scanner.py
tests/: test_filters.py  test_fvg.py  test_indicators.py  test_intraday.py  test_risk.py  test_utils.py
